--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,32 @@
 /FileOutputStream1/nbproject/private/
 /FileOutputStream1/build/
 /FileOutputStream1/dist/
+/YurtDışı - Exception/nbproject/private/
+/GetTheDataWithFileInputStream/nbproject/private/
+/PriorityQueue/nbproject/private/
+/PriorityQueue/build/
+/FinallyBloğu/nbproject/private/
+/CollectionFrameworkTekrar/nbproject/private/
+/VectorlerveStackler/nbproject/private/
+/YurtDışı - Exception/build/
+/ExceptionPropagation/nbproject/private/
+/ExceptionPropagation/build/
+/QueueveLinkedList/nbproject/private/
+/Exception Yakalayarak Hesap Makinesi/nbproject/private/
+/Exception Yakalayarak Hesap Makinesi/build/
+/IterableClasslarOluşturma/nbproject/private/
+/ListIteratorveIterator/nbproject/private/
+/TryveCatchBlokları/nbproject/private/
+/Throwsanahtarkelimesi/nbproject/private/
+/FinallyBloğu/build/
+/VectorlerveStackler/build/
+/QueueveLinkedList/build/
+/IterableClasslarOluşturma/build/
+/ListIteratorveIterator/build/
+/Throwsanahtarkelimesi/build/
+/TryveCatchBlokları/build/
+/FileInputStream/nbproject/private/
+/FileInputStream1/nbproject/private/
+/FileInputStream1/build/
+/Mp3Kopyalama/nbproject/private/
+/Mp3Kopyalama/build/
