--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@
 /FileInputStream1/build/
 /Mp3Kopyalama/nbproject/private/
 /Mp3Kopyalama/build/
+/ProducerConsumerProblem/nbproject/private/
+/ProducerConsumerProblem/build/
