--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,15 @@
 /Mp3Kopyalama/build/
 /ProducerConsumerProblem/nbproject/private/
 /ProducerConsumerProblem/build/
+/WebPageOpen/nbproject/private/
+/WebPageOpen/build/
+/BasicCalculator/nbproject/private/
+/BasicCalculator/build/
+/LoginWithJPasswordField/nbproject/private/
+/LoginWithJPasswordField/build/
+/LetterFrequencyWithJTextArea/nbproject/private/
+/LetterFrequencyWithJTextArea/build/
+/OrderServiceWithCheckBox/nbproject/private/
+/OrderServiceWithCheckBox/build/
+/JCombobBoxAndRadioButton/nbproject/private/
+/JCombobBoxAndRadioButton/build/
