--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@
 /OrderServiceWithCheckBox/build/
 /JCombobBoxAndRadioButton/nbproject/private/
 /JCombobBoxAndRadioButton/build/
+/StockManagement/nbproject/private/
+/StockManagement/build/
