--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,15 @@
 /JCombobBoxAndRadioButton/build/
 /StockManagement/nbproject/private/
 /StockManagement/build/
+/FileDownloadSimulationWithProgressBar/nbproject/private/
+/FileDownloadSimulationWithProgressBar/build/
+/JListUsage/nbproject/private/
+/JListUsage/build/
+/RegisterLoginApp/nbproject/private/
+/RegisterLoginApp/build/
+/JFileChooserAndColorChooser/nbproject/private/
+/JFileChooserAndColorChooser/build/
+/MenuUsage/nbproject/private/
+/MenuUsage/build/
+/GraficUsage/nbproject/private/
+/GraficUsage/build/
