--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@
 /MenuUsage/build/
 /GraficUsage/nbproject/private/
 /GraficUsage/build/
+/DatabaseUsage/nbproject/private/
+/DatabaseUsage/build/
+/CommitveRollback/build/
+/CommitveRollback/nbproject/private/
